Fixed system with new refactoring

--- a/app/views/tips/tip.html.erb
+++ b/app/views/tips/tip.html.erb
@@ -1,9 +1,17 @@
 <h1>Tip <%= @client.name %></h1>
 
-<%= simple_form_for @stripe_card_tip, :url => tips_path do |f| %>
-  <%= f.input :amount %>
+<% if @stripe_card.errors.any? %>
+  <ul>
+    <% @stripe_card.errors.each do |m, v| %>
+    <li><%= m %>: <%= v %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= simple_form_for @stripe_card, :url => tips_path do |f| %>
+  <%= f.input :charge_amount, :as => :integer %>
   <%= f.input :name %>
-  <%= f.input :number %>
+  <%= f.input :credit_card_number %>
   <%= f.input :exp_month %>
   <%= f.input :exp_year %>
 
