--- a/app/views/layouts/tip.html.erb
+++ b/app/views/layouts/tip.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "tip" %>
     <%= csrf_meta_tags %>
 
     <!-- Fav and touch icons -->
