--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,7 +1,4 @@
 @import "twitter/bootstrap/bootstrap";
-
-body { padding-top: 60px; }
-
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
@@ -32,3 +29,10 @@ body { padding-top: 60px; }
 //
 // Example:
 // @linkColor: #ff0000;
+
+@import 'global';
+
+body {
+  padding-top: 10px;
+  background-color: @main_bgr;
+}
