--- a/app/views/tips/_stripe_card.html.erb
+++ b/app/views/tips/_stripe_card.html.erb
@@ -1,21 +1,34 @@
 
 <div class="payment-details">
   Payment details
-  <span id="cc-images">
-    <%= image_tag 'credit_cards/visa.png', :id => 'visa', :class => 'cc_img' %>
-    <%= image_tag 'credit_cards/mastercard.png', :id => 'mastercard', :class => 'cc_img' %>
-    <%= image_tag 'credit_cards/amex.png', :id => 'amex', :class => 'cc_img' %>
-    <%= image_tag 'credit_cards/discover.png', :id => 'discover', :class => 'cc_img' %>
-  </span>
 
   <%= form_for stripe_card, :autocomplete => 'on', :id => 'stripe_payment' do |f| %>
     <%= hidden_field_tag :short_name, @client.short_name %>
-    <p class="form-field">Amount: <%= f.text_field :charge_amount, :as => :radio, :collection => [1, 5, 10] %></p>
-    <p class="form-field">Name: <%= f.text_field :name %></p>
-    <p class="form-field">Credit Card #: <%= f.text_field :credit_card_number, :class => 'cc-number', :pattern => '[\d|\s]*', 'autocompletetype' => "cc-number", :placeholder => "Card number", :required => true %></p>
-    <p class="form-field">Expiration: <%= f.text_field :expiration, :class => 'cc-exp' %></p>
+    <div class="controls controls-row">
+      <span class="btn-group" data-toggle-name="charge_amount" id="charge-amount-selector">
+        <a class="btn" data-value="200">$2</a>
+        <a class="btn active" data-value="500">$5</a>
+        <a class="btn" data-value="1000">$10</a>
+        <a class="btn" data-value="100-1000-5000">Other</a>
+      </span>
+      <input type="text" class="input-mini dollar" id="other-input" placeholder="5.00" type="number" pattern="[\d]*" min="1" max="50" /></span>
+      <input type="hidden" id="charge-amount" name="charge_amount" value="500" />
+    </div>
+
+    <p class="form-field">
+      Credit Card #:
+      <span id="cc-images">
+        <%= image_tag 'credit_cards/visa.png', :id => 'visa', :class => 'cc_img' %>
+        <%= image_tag 'credit_cards/mastercard.png', :id => 'mastercard', :class => 'cc_img' %>
+        <%= image_tag 'credit_cards/amex.png', :id => 'amex', :class => 'cc_img' %>
+        <%= image_tag 'credit_cards/discover.png', :id => 'discover', :class => 'cc_img' %>
+      </span>
+    </p>
+    <%= f.text_field :credit_card_number, :class => 'cc-number', :pattern => '[\d|\s]*', 'autocompletetype' => "cc-number", :placeholder => "Card number", :required => true %></p>
+    <p class="form-field">Expiration: <%= f.text_field :expiration, :class => 'cc-exp', :placeholder => '01 / 2011' %></p>
 
     <%= f.submit 'Tip!', :class => 'btn btn-primary' %>
+
   <% end %>
 
 </div>
