--- a/app/views/layouts/tip.html.erb
+++ b/app/views/layouts/tip.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title><%= @title || "Tip #{@client.name}"%></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
